refactor(service) : increase function langgraph
